# UPDKZG

./: .gitmodules  CMakeLists.txt
examples/: toy_example.cpp
include/upkzg/: kzg.hpp  pes.hpp  poly.hpp  snark_adapter.hpp  srs.hpp  types.hpp
src/: kzg.cpp
tests/: test_kzg.cpp
tests/unit/: test_kzg_basic.cpp  test_poly.cpp  test_update.cpp
